--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,4 +1,8 @@
-<form action="/answer" data-turbo="false">
-  <input type="text" name="question">
-  <input type="submit" value="Ask!">
-</form>
+<div class="input-group mb-3 p-3">
+  <form class="col-8 d-flex" action="/answer" data-turbo="false">
+    <input class="form-control" type="text" name="question">
+    <div class="input-group-append">
+      <input type="submit" value="Ask!">
+    </div>
+  </form>
+</div>
